--- a/src/app/pages/teacher/course/createcourse.component.html
+++ b/src/app/pages/teacher/course/createcourse.component.html
@@ -4,7 +4,7 @@
       </header>
     <div class="row">
         <div class="col-lg-8 col-md-8">
-            <div class="card">
+            <div class="card left-card">
                 <div class="card-body">
                     <div class="form-group">
                         <label>Title</label>
@@ -37,7 +37,7 @@
             </div>
         </div>
         <div class="col-lg-4 col-md-4">
-            <div class="card">
+            <div class="card right-card">
                 <div class="card-body">
                     <div class="form-group">
                         <label>Topic</label>
