--- a/src/app/pages/teacher/course/my-course/mycourse.component.html
+++ b/src/app/pages/teacher/course/my-course/mycourse.component.html
@@ -9,16 +9,16 @@
         </div>
     </div>
     <div class="col-md-10 col-lg-10">
-        <div class="row">
-            <div class="col-md-3 col-lg-3" *ngFor = "let course of myCourses; index as i;">
-                <div class="card">
-                    <img *ngIf="course.img" [src]="['./assets/demo/img/blog/'+course.img]" alt="">
-                    <div class="card-body">
-                        <h4 class="card-title">{{ course.title }}</h4>
-                        <p class="card-text">{{ course.date }}</p>
-                    </div>
-                </div>
+        <div class="card-deck">
+            <div class="card" *ngFor = "let course of myCourses; index as i;">
+              <img class="card-img-top" src="./assets/demo/img/headers/3.png">
+          
+              <div class="card-body">
+                <h4 class="card-title">{{ course.title }}</h4>
+                <h6 class="card-subtitle">{{ course.date }}</h6>
+          
+              </div>
             </div>
-        </div>
+          </div>
     </div>
 </div>
