--- a/src/app/widgets/youtube-card/youtube-card.component.scss
+++ b/src/app/widgets/youtube-card/youtube-card.component.scss
@@ -1,18 +1,22 @@
-.youtube-card {
-    padding: 10px;
-    border: 1px solid #3333;
-    border-radius: 3px;
-    position: relative;
-    .remove-icon {
-        position: absolute;
-        right: -10px;
-        top: -10px;
-        font-size: 1em;
-        background-color: #ff6b68;
-        color: white;
-        font-weight: bolder;
-        padding: 0.2rem 0.6rem;
-        border-radius: 50%;
-        cursor: pointer;
+.card {
+    .card-body {
+        .actions {
+            position: absolute;
+            right: 10px;
+            z-index: 2;
+            top: 0px;
+        }
+        .media {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            iframe {
+                width: 30%;
+            }
+            .media-body {
+                flex: none;
+                width: 65%;
+            }
+        }
     }
 }
