--- a/src/app/pages/teacher/course/createcourse.component.html
+++ b/src/app/pages/teacher/course/createcourse.component.html
@@ -21,8 +21,8 @@
                             <button dropdownToggle type="button" class="btn btn-danger">Add Media</button>
                             <div class="dropdown-menu" *dropdownMenu>
                               <!-- <button class="dropdown-item" (click)="quizModal.show()">Image</button> -->
-                              <button class="dropdown-item" (click)="youtubeModal.show()" href="#">YouTube Link</button>
-                              <button class="dropdown-item" (click)="quizModal.show()">Quizz</button>
+                              <button class="dropdown-item" (click)="youtubeModal.show()">YouTube Link</button>
+                              <a class="dropdown-item" [routerLink]="['/teacher/grading']">Quizz</a>
                             </div>
                         </div>
                     </div>
@@ -118,178 +118,3 @@
     </div>
 </div>
 
-
-<div class="modal fade" bsModal #quizModal="bs-modal" tabindex="-1" role="dialog" aria-labelledby="dialog-static-name">
-    <div class="modal-dialog modal-lg">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h4 class="modal-title">Quiz</h4>
-        </div>
-        <div class="modal-body">
-            <div class="row">
-                <div class="col-md-6 col-lg-6">
-                    <form>
-                        <div class="form-group">
-                            <div class="row">
-                                <div class="col-md-5 col-lg-5">
-                                    <div class="select">
-                                        <select class="form-control">
-                                            <option>Science</option>
-                                            <option>Option 2</option>
-                                            <option>Option 3</option>
-                                            <option>Option 4</option>
-                                            <option>Option 5</option>
-                                        </select>
-                                        <i class="form-group__bar"></i>
-                                    </div>
-                                </div>
-                                <div class="col-md-1 col-lg-1"></div>
-                                <div class="col-md-3 col-lg-3">
-                                    <button class="btn btn-light">Save Draft</button>
-                                </div>
-                                <div class="col-md-3 col-lg-3">
-                                    <button class="btn btn-primary">Publish</button>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <label for="">Question</label>
-                            <input type="text" class="form-control" placeholder="Type your question here">
-                            <i class="form-group__bar"></i>
-                        </div>
-                        <div class="form-group answer-form">
-                            <div class="row">
-                                <div class="col-md-1 col-lg-1">
-                                    <div class="checkbox checkbox--inline">
-                                        <input type="checkbox" id="answerCheck1">
-                                        <label class="checkbox__label" for="answerCheck1"> </label>
-                                    </div>
-                                </div>
-                                <div class="col-md-9 col-lg-9">
-                                    <input type="text" class="form-control" placeholder="Answer Option1">
-                                    <i class="form-group__bar"></i>
-                                </div>
-                                <div class="col-md-2 col-lg-2 remove-icon">
-                                    <span class="remove">x</span>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-md-1 col-lg-1">
-                                    <div class="checkbox checkbox--inline">
-                                        <input type="checkbox" id="answerCheck2">
-                                        <label class="checkbox__label" for="answerCheck2"> </label>
-                                    </div>
-                                </div>
-                                <div class="col-md-9 col-lg-9">
-                                    <input type="text" class="form-control" placeholder="Answer Option2">
-                                    <i class="form-group__bar"></i>
-                                </div>
-                                <div class="col-md-2 col-lg-2 remove-icon">
-                                    <span class="remove">x</span>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-md-1 col-lg-1">
-                                    <div class="checkbox checkbox--inline">
-                                        <input type="checkbox" id="answerCheck3">
-                                        <label class="checkbox__label" for="answerCheck3"> </label>
-                                    </div>
-                                </div>
-                                <div class="col-md-9 col-lg-9">
-                                    <input type="text" class="form-control" placeholder="Answer Option3">
-                                    <i class="form-group__bar"></i>
-                                </div>
-                                <div class="col-md-2 col-lg-2 remove-icon">
-                                    <span class="remove">x</span>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-md-1 col-lg-1">
-                                    <div class="checkbox checkbox--inline">
-                                        <input type="checkbox" id="answerCheck4">
-                                        <label class="checkbox__label" for="answerCheck4"> </label>
-                                    </div>
-                                </div>
-                                <div class="col-md-9 col-lg-9">
-                                    <input type="text" class="form-control" placeholder="Answer Option4">
-                                    <i class="form-group__bar"></i>
-                                </div>
-                                <div class="col-md-2 col-lg-2 remove-icon">
-                                    <span class="remove">x</span>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="form-group" style="text-align: right;">
-                            <button type="button" class="btn btn-warning">Add This Question</button>
-                        </div>
-                    </form>
-                </div>
-                <div class="col-md-6 col-lg-6">
-                    <div class="question-card">
-                        <div class="question-action">
-                            <span>Question1</span>
-                            <div class="action">
-                                <span class="edit"><i class="zmdi zmdi-edit zmdi-hc-fw"></i></span>
-                                <span class="remove">x</span>
-                            </div>
-                        </div>
-                        <div class="question-title">
-                            <h5>What direction does the sun rise</h5>
-                        </div>
-                        <div class="question-answers">
-                            <ul>
-                                <li>North</li>
-                                <li class="correct">East</li>
-                                <li>West</li>
-                                <li>South</li>
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="question-card">
-                        <div class="question-action">
-                            <span>Question1</span>
-                            <div class="action">
-                                <span class="edit"><i class="zmdi zmdi-edit zmdi-hc-fw"></i></span>
-                                <span class="remove">x</span>
-                            </div>
-                        </div>
-                        <div class="question-title">
-                            <h5>What direction does the sun rise</h5>
-                        </div>
-                        <div class="question-answers">
-                            <ul>
-                                <li>North</li>
-                                <li class="correct">East</li>
-                                <li>West</li>
-                                <li>South</li>
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="question-card">
-                        <div class="question-action">
-                            <span>Question1</span>
-                            <div class="action">
-                                <span class="edit"><i class="zmdi zmdi-edit zmdi-hc-fw"></i></span>
-                                <span class="remove">x</span>
-                            </div>
-                        </div>
-                        <div class="question-title">
-                            <h5>What direction does the sun rise</h5>
-                        </div>
-                        <div class="question-answers">
-                            <ul>
-                                <li>North</li>
-                                <li class="correct">East</li>
-                                <li>West</li>
-                                <li>South</li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="modal-footer">
-        </div>
-      </div>
-    </div>
-</div>
