--- a/src/app/pages/teacher/course/my-course/mycourse.component.html
+++ b/src/app/pages/teacher/course/my-course/mycourse.component.html
@@ -15,9 +15,16 @@
           
               <div class="card-body">
                 <h4 class="card-title">{{ course.title }}</h4>
-                <h6 class="card-subtitle">{{ course.date }}</h6>
-          
+                <h6 class="card-subtitle"></h6>
+                <p class="card-content">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+                proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <button class="btn btn-danger" style="width: 100%;">VIEW</button>
               </div>
+                <div class="card-footer">{{ course.date }}</div>
             </div>
           </div>
     </div>
