--- a/src/app/pages/teacher/grade/grade.component.html
+++ b/src/app/pages/teacher/grade/grade.component.html
@@ -4,10 +4,11 @@
     </header>
     <div class="row">
         <div class="col-md-3 col-lg-3">
-            <div class="card">
+            <div class="card" style="max-height: 75vh; overflow-y: auto">
                 <div class="card-body">
                     <ul class="nav flex-column">
                         <li class="nav-item mark-as-complete"><button type="button" class="btn btn-info">Mark as Complete</button></li>
+                        <li class="nav-item" *ngFor="let member of classMembers; index as i;"><a class="nav-link">{{member}}</a></li>
                         <li class="nav-item" *ngFor="let member of classMembers; index as i;"><a class="nav-link">{{member}}</a></li>
                     </ul>
                 </div>
